and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

24 October 14: V.Ivanchenko (emmuons-V10-00-02)
- G4TablesForExtrapolator - a new class which store EM tables 
    shared between threads
- G4EnergyLossForExtrapolator - data moved to the new class

22 October 14: V.Ivanchenko (emmuons-V10-00-01)
- G4MuPairProductionModel, G4MuBremsstrahlungModel, G4MuIonisation
    used G4EmParameters

8 September 14: V.Ivanchenko (emmuons-V10-00-00)
- G4MuPairProductionModel, G4MuBremsstrahlungModel -
    protection at initialisation for the case when user artifitially
    reducing high energy limit of the model (bug #1670)

28 October 13: V.Ivanchenko (emmuons-V09-06-24)
- G4EnergyLossForExtrapolator - substitute G4eBremsstrahlungModel 
    by G4SeltzerBergerModel
- G4MuBremsstrahlungModel - lowest energy is set to 1 GeV

14 October 2013: V.Ivant (emmuons-V09-06-23)
- G4MuPairProductionModel - fixed problem with the end of the spectra
    by cleanup initialisation of sampling table

02 October 2013: V.Ivant (emmuons-V09-06-22)
- G4EnergyLossForExtrapolator - use G4Log

19 September 2013: V.Ivant (emmuons-V09-06-21)
- G4MuPairProductionModel - minor cleanup

18 September 2013: V.Ivant (emmuons-V09-06-20)
- G4MuPairProductionModel - fixed trivial Coverity report; merge 
    SetElement() and MaxSecondaryEnergy() methods into one
    MaxSecondaryEnergyForElement() - this is more performant
    and more safe for reproducibility; use G4Log and G4Exp
- G4MuBremsstrahlungModel and G4MuBetheBlochModel - use G4Log and 
    G4Exp

12 September 2013: V.Ivant (emmuons-V09-06-19)
- G4MuPairProductionModel - fixed bug in sampling when cut value is 
    high; perform common initialisation of internal variables for